<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#efefef"
    tools:context=".Menu">



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/encabezado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/encabezado" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/scroll"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <!--MANATI-->
            <ImageButton
                android:id="@+id/manati"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/manati"
                app:srcCompat="@drawable/santuario_manati" />

            <!--LAZARO CARDENAS-->
            <ImageView
                android:id="@+id/lazaro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/lazaro"
                app:srcCompat="@drawable/lazaro_cardenaz" />

            <!--Mujer Chetumalenia-->
            <ImageView
                android:id="@+id/mujer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/monumento_a_la_mujer"
                app:srcCompat="@drawable/monumento_a_mujer_la_chetumalena" />


        </LinearLayout>

    </HorizontalScrollView>

</LinearLayout>